--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,26 +1,65 @@
+* {
+	box-sizing: border-box;
+}
+body{
+	background-color: #2D112B ;
+}
 nav{
-	
+	position: fixed;
+	left: 0;
+	right: 0;
+	background-color: #ff5b19;
 }
-#navcontainer ul
-{
-margin: 0;
-padding: 0;
-list-style-type: none;
-text-align: center;
-}
-
-#navcontainer ul li { display: inline; }
-
-#navcontainer ul li a
-{
-text-decoration: none;
-padding: .2em 1em;
-color: #fff;
-background-color: #036;
+nav ul{
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	text-align: left;
+	font-size: 0;
 }
 
-#navcontainer ul li a:hover
-{
-color: #fff;
-background-color: #369;
+nav ul li { font-size: 13px; display: inline-block; padding: 0; margin: 0; }
+
+nav ul li a{
+	font-family: 'Advent Pro', sans-serif;
+	font-size: 2.3em;
+	text-decoration: none;
+	height: 100%;
+	width: auto;
+	display: inline-block;
+	padding: 40px 40px;
+	color: #fff;
+	background-color: #ff5b19; 
+}
+
+nav ul li a:hover{ 
+	background-color: #ff7740;
+		color: #2D112B;
+}
+.about{width:15%}
+.officers{width:30%}
+.projects{width:35%}
+.contact{width:20%}
+
+.announcements-stream{
+	height:304px;
+	width:340px;
+	text-align:left;
+	color:#51585e
+}
+.announcement-card{
+	border-radius: 3px;
+    box-shadow: 0 1px 2px rgba(0,0,0,.1);
+    border: 1px solid #dedfe9;
+    background: #fff;
+    margin: 10px 20px 0 20px;
+    padding: 10px;
+    text-align: left;
+}
+.announcements-header{
+	position:relative;
+	padding-left:25px;
+	margin-bottom:8px;
+	min-height:20px;
+	line-height:20px
 }
