--- a/stylesheet.css
+++ b/stylesheet.css
@@ -43,16 +43,16 @@ nav ul li a:hover{
 
 .announcements-stream{
 	height:304px;
-	width:640px;
+	width:740px;
 	text-align:left;
 	color:#51585e;
 	position: absolute;
-	top: 20%;
+	top: 100px;
 	margin: 60px;
 }
 .announcement-card{
 	border-radius: 3px;
-    box-shadow: 0 1px 2px rgba(0,0,0,.1);
+    box-shadow: 4px 4px 4px black;
     border: 1px solid #dedfe9;
     background: #fff;
     margin: 10px 20px 0 20px;
@@ -64,19 +64,24 @@ nav ul li a:hover{
 	padding-left:25px;
 	margin-bottom:8px;
 	min-height:20px;
-	line-height:20px
+	line-height:20px;
 }
 .announcement-title{
-	margin-left: 40px;	
+	margin-left: 100px;
 }
 .announcement-avatar{
 	background-image: url(http://i.imgur.com/5h5NrJc.jpg);
 	background-size: cover;
   	background-repeat: no-repeat;
-	border-radius: 20px;
-    height: 35px;
-    width: 35px;
-    position: absolute;
-    top: 15px;
-    left: 30px;
+	border-radius: 40px;
+	border: 3px solid darkgray;
+    height: 75px;
+    width: 75px;
+    position: relative;
+    top: 30px;
+    left: 10px;
+}
+.announcement-body{
+	margin-top: 30px;
+	margin-left: 30px;
 }
