--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,7 +70,6 @@ nav ul li a:hover{
 	margin-left: 100px;
 }
 .announcement-avatar{
-	background-image: url(http://i.imgur.com/5h5NrJc.jpg);
 	background-size: cover;
   	background-repeat: no-repeat;
 	border-radius: 40px;
@@ -84,4 +83,6 @@ nav ul li a:hover{
 .announcement-body{
 	margin-top: 30px;
 	margin-left: 30px;
+	font-family: 'Open Sans', sans-serif;
+	line-height: 40px;
 }
